Prep notebooks for AnyScale Demo

--- a/Notebooks/Anyscale Demo/s1-upload-l5kit-data-wandb.ipynb
+++ b/Notebooks/Anyscale Demo/s1-upload-l5kit-data-wandb.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pull Data from Woven Planet and then Log to WANDB for Reuse across Different Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -35,6 +52,61 @@
    "source": [
     "import os\n",
     "os.chdir(save_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 6,
+     "status": "ok",
+     "timestamp": 1660793717357,
+     "user": {
+      "displayName": "Anish Shah",
+      "userId": "05913492621931233323"
+     },
+     "user_tz": 240
+    },
+    "id": "kCP4VQwl1PVT",
+    "outputId": "56100aeb-334c-4cac-d0dc-c226bb959d16"
+   },
+   "outputs": [],
+   "source": [
+    "%%writefile requirements.txt\n",
+    "wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 11005,
+     "status": "ok",
+     "timestamp": 1660793827302,
+     "user": {
+      "displayName": "Anish Shah",
+      "userId": "05913492621931233323"
+     },
+     "user_tz": 240
+    },
+    "id": "4dnkoah23lC8"
+   },
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!pip install wandb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download Data"
    ]
   },
   {
@@ -111,36 +183,6 @@
      "base_uri": "https://localhost:8080/"
     },
     "executionInfo": {
-     "elapsed": 6,
-     "status": "ok",
-     "timestamp": 1660793717357,
-     "user": {
-      "displayName": "Anish Shah",
-      "userId": "05913492621931233323"
-     },
-     "user_tz": 240
-    },
-    "id": "kCP4VQwl1PVT",
-    "outputId": "56100aeb-334c-4cac-d0dc-c226bb959d16"
-   },
-   "outputs": [],
-   "source": [
-    "%%writefile requirements.txt\n",
-    "l5kit\n",
-    "pyyaml\n",
-    "ray==2.0.0rc1\n",
-    "\"ray[air]\"\n",
-    "wandb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
      "elapsed": 98950,
      "status": "ok",
      "timestamp": 1660793816303,
@@ -159,25 +201,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 11005,
-     "status": "ok",
-     "timestamp": 1660793827302,
-     "user": {
-      "displayName": "Anish Shah",
-      "userId": "05913492621931233323"
-     },
-     "user_tz": 240
-    },
-    "id": "4dnkoah23lC8"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "%%capture\n",
-    "!pip install wandb"
+    "## Log Data to WANDB"
    ]
   },
   {
@@ -205,6 +232,16 @@
    "source": [
     "import wandb\n",
     "wandb.login()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Enrich Run information and Artifact Information"
    ]
   },
   {
@@ -629,6 +666,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Log Data to Wandb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -651,17 +695,35 @@
    },
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "run = wandb.init(entity=wandb_entity,\n",
     "                 project=project_name,\n",
     "                 job_type=run_type,\n",
     "                 name=run_name,\n",
     "                 tags=tags,\n",
-    "                 notes=run_description)\n",
+    "                 notes=run_description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#🪄🐝\n",
     "l5_data_artifact = wandb.Artifact(name=artifact_name, type=artifact_type, description=artifact_description)\n",
     "l5_data_artifact.add_dir(\"./dataset\", \"dataset\")\n",
     "l5_data_artifact.add_dir(\"./configurations\", \"configurations\")\n",
     "l5_data_artifact.add_file(\"./requirements.txt\")\n",
-    "l5_data_artifact.add_file(\"./setup_data.sh\")\n",
+    "l5_data_artifact.add_file(\"./setup_data.sh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "run.log_artifact(l5_data_artifact)"
    ]
   },
@@ -700,13 +762,6 @@
    "source": [
     "run.finish()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
