--- a/Notebooks/Anyscale Demo/s2-visualise-l5-data.ipynb
+++ b/Notebooks/Anyscale Demo/s2-visualise-l5-data.ipynb
@@ -25,6 +25,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -117,33 +127,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 344
-    },
-    "executionInfo": {
-     "elapsed": 234,
-     "status": "error",
-     "timestamp": 1660797993640,
-     "user": {
-      "displayName": "Anish Shah",
-      "userId": "05913492621931233323"
-     },
-     "user_tz": 240
-    },
-    "id": "gUsbd3sgCk9f",
-    "outputId": "46bd87d5-5e38-4f63-fd55-f7308da45cbc"
-   },
-   "outputs": [],
-   "source": [
-    "import wandb\n",
-    "wandb.login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "Xkf2xhE7u-eJ"
    },
    "outputs": [],
@@ -181,6 +164,33 @@
     "In this example, the env variable is set to the local data folder. You should make sure the path points to the correct location for you.\n",
     "\n",
     "We built our code to work with a human-readable `yaml` config. This config file holds much useful information, however, we will only focus on a few functionalities concerning loading and visualization here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 344
+    },
+    "executionInfo": {
+     "elapsed": 234,
+     "status": "error",
+     "timestamp": 1660797993640,
+     "user": {
+      "displayName": "Anish Shah",
+      "userId": "05913492621931233323"
+     },
+     "user_tz": 240
+    },
+    "id": "gUsbd3sgCk9f",
+    "outputId": "46bd87d5-5e38-4f63-fd55-f7308da45cbc"
+   },
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "wandb.login()"
    ]
   },
   {
@@ -238,6 +248,7 @@
    },
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "run = wandb.init(\n",
     "    entity=wandb_entity,\n",
     "    project=project_name,\n",
@@ -274,6 +285,7 @@
    },
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
@@ -536,6 +548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "coord_table = wandb.Table(data=coords, columns=[\"x\", \"y\"]) #TODO: Validate these columns are correct"
    ]
   },
@@ -784,6 +797,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "sampled_frames_table = wandb.Table(columns = [\"frame_idx\", \"semantic_view\", \"satellite_view\"])\n",
     "for frame_idx, semantic_frame_path, satellite_frame_path in zip(frame_sample_indexes, semantic_frame_paths, satellite_frame_paths):\n",
     "    sampled_frames_table.add_data(frame_idx, wandb.Image(str(semantic_frame_path)), wandb.Image(str(satellite_frame_path)))"
@@ -798,6 +812,13 @@
     "## What if I want to visualise an agent?\n",
     "\n",
     "Glad you asked! We can just replace the `EgoDataset` with an `AgentDataset`. Now we're iterating over agents and not the AV anymore, and the first one happens to be the pace car (you will see this one around a lot in the dataset)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Semantic"
    ]
   },
   {
@@ -927,6 +948,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "sampled_agents_table = wandb.Table(columns = [\"agent_idx\", \"semantic_view\", \"satellite_view\"])\n",
     "for agent_idx, semantic_agent_path, satellite_agent_path in zip(agent_sample_indexes, semantic_agent_paths, satellite_agent_paths):\n",
     "    sampled_agents_table.add_data(agent_idx, wandb.Image(str(semantic_agent_path)), wandb.Image(str(satellite_agent_path)))"
@@ -961,6 +983,13 @@
     "- `get_scene_indices` returns indices for a given scene. For both datasets, these might return more than one index\n",
     "\n",
     "In this example, we visualise a scene from the ego's point of view:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Semantic"
    ]
   },
   {
@@ -1164,6 +1193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "sampled_animations_table = wandb.Table(columns = [\"scene_idx\", \"semantic_view\", \"satellite_view\", \"bokeh_view\"])\n",
     "for scene_idx, semantic_scene_path, satellite_scene_path, bokeh_scene_path in zip(sampled_scene_indices, semantic_scene_animation_paths, satellite_scene_animation_paths, bokeh_animation_paths):\n",
     "    sampled_animations_table.add_data(scene_idx, \n",
@@ -1212,6 +1242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "analysis_artifact = wandb.Artifact(name=artifact_name, type=artifact_type, description=artifact_description)\n",
     "analysis_artifact.add(zarr_dataset_details_table, \"zarr_dataset_details_table\")\n",
     "analysis_artifact.add(coord_table, \"coord_table\")\n",
