--- a/Notebooks/Anyscale Demo/s4-eval_agent_motion_prediction.ipynb
+++ b/Notebooks/Anyscale Demo/s4-eval_agent_motion_prediction.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "78f8576c-7a2a-48da-95e5-cdfdb2fd509b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "26946d7b-0af8-4881-b9e6-ce321dde61d2",
@@ -80,17 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ea836c4-1cd2-4677-9cf1-c68d4825ec78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import wandb\n",
-    "wandb.login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b4e40dce-0b6b-4527-aed6-a389ed7b09fd",
    "metadata": {},
    "outputs": [],
@@ -132,6 +132,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6ea836c4-1cd2-4677-9cf1-c68d4825ec78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "wandb.login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "07edc0a9-a02a-475b-a699-08e41a100eff",
    "metadata": {},
    "outputs": [],
@@ -154,6 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    " #🪄🐝\n",
     "run = wandb.init(\n",
     "    entity=wandb_entity,\n",
     "    project=project_name,\n",
@@ -185,6 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    " #🪄🐝\n",
     "artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
@@ -201,28 +214,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0ff257e-41ca-4d8d-8677-f61d59fa4fc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#BUG: need to seperate runs into download and training due to issues with routing runs after ray.tune\n",
-    "# run.finish()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "cd206d44-416c-4db3-97ee-2144f636a0a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dataset is assumed to be on the folder specified\n",
-    "# in the L5KIT_DATA_FOLDER environment variable\n",
-    "\n",
-    "# get config\n",
     "cfg = load_config_data(Path(data_directory, \"configurations\", \"agent_motion_config.yaml\"))\n",
-    "l5_data_location = Path(data_directory, \"dataset\")\n",
-    "# run.config.update(cfg)"
+    "l5_data_location = Path(data_directory, \"dataset\")"
    ]
   },
   {
@@ -232,7 +229,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cfg[\"zarr_dataset_location\"] = l5_data_location\n",
     "os.environ[\"L5KIT_DATA_FOLDER\"] = str(l5_data_location)"
    ]
   },
@@ -328,13 +324,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73cfabd6-59ae-4e6f-a419-62f4b04d143b",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "cbe160fa-918e-4da0-9b45-0bf04b89443f",
+   "metadata": {
+    "id": "1cyqL6i1JCbj"
+   },
    "source": [
-    "#TODO: serialize the forward in the artifact? Is there a way to better do this with ray?"
+    "### Save results\n",
+    "After the model has predicted trajectories for our evaluation set, we can save them in a `csv` file.\n",
+    "\n",
+    "During the competition, only the `.zarr` and the mask will be provided for the private test set evaluation.\n",
+    "Your solution is expected to generate a csv file which will be compared to the ground truth one on a separate server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "691ae693-5b0f-4fe9-92d0-01a571bf749e",
+   "metadata": {
+    "id": "YX-loQElJCbj"
+   },
+   "source": [
+    "### Perform Evaluation\n",
+    "Pleae note that our metric supports multi-modal predictions (i.e. multiple predictions for a single GT trajectory). In that case, you will need to provide a confidence for each prediction (confidences must all be between 0 and 1 and sum to 1).\n",
+    "\n",
+    "In this simple example we don't generate multiple trajectories, so we won't pass any confidences vector. Internally, the metric computation will assume a single trajectory with confidence equal to 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f263a9d-4098-4cee-a3da-d4589c19e165",
+   "metadata": {
+    "id": "nEw-PI7tJCbk"
+   },
+   "source": [
+    "### Visualise Results\n",
+    "We can also visualise some results from the ego (AV) point of view for those frames of interest (the 100th of each scene).\n",
+    "\n",
+    "However, as we chopped off the future from the dataset **we must use the GT csv if we want to plot the future trajectories of the agents**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "379ae8ab-6522-47a2-b349-a397cc5b900c",
+   "metadata": {},
+   "source": [
+    "# Run Evaluation"
    ]
   },
   {
@@ -430,14 +464,7 @@
     "                                                        average_displacement_error_mean,\n",
     "                                                        final_displacement_error_oracle,\n",
     "                                                        final_displacement_error_mean,\n",
-    "                                                        # detect_collision,\n",
-    "                                                        # distance_to_reference_trajectory\n",
     "                                                       ])\n",
-    "    # for metric_name, metric_mean in metrics.items():\n",
-    "    #     print(metric_name, metric_mean)\n",
-    "    \n",
-    "    # model.eval()\n",
-    "    # torch.set_grad_enabled(False)\n",
     "\n",
     "    # build a dict to retrieve future trajectories from GT\n",
     "    print(\"Running scene frame prediction!\")\n",
@@ -500,42 +527,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe160fa-918e-4da0-9b45-0bf04b89443f",
-   "metadata": {
-    "id": "1cyqL6i1JCbj"
-   },
+   "id": "e3d38de8-2ed0-42cc-bb43-415e553c52a3",
+   "metadata": {},
    "source": [
-    "### Save results\n",
-    "After the model has predicted trajectories for our evaluation set, we can save them in a `csv` file.\n",
-    "\n",
-    "During the competition, only the `.zarr` and the mask will be provided for the private test set evaluation.\n",
-    "Your solution is expected to generate a csv file which will be compared to the ground truth one on a separate server"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "691ae693-5b0f-4fe9-92d0-01a571bf749e",
-   "metadata": {
-    "id": "YX-loQElJCbj"
-   },
-   "source": [
-    "### Perform Evaluation\n",
-    "Pleae note that our metric supports multi-modal predictions (i.e. multiple predictions for a single GT trajectory). In that case, you will need to provide a confidence for each prediction (confidences must all be between 0 and 1 and sum to 1).\n",
-    "\n",
-    "In this simple example we don't generate multiple trajectories, so we won't pass any confidences vector. Internally, the metric computation will assume a single trajectory with confidence equal to 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f263a9d-4098-4cee-a3da-d4589c19e165",
-   "metadata": {
-    "id": "nEw-PI7tJCbk"
-   },
-   "source": [
-    "### Visualise Results\n",
-    "We can also visualise some results from the ego (AV) point of view for those frames of interest (the 100th of each scene).\n",
-    "\n",
-    "However, as we chopped off the future from the dataset **we must use the GT csv if we want to plot the future trajectories of the agents**\n"
+    "We use the `wandb` Public API to easily grab all the runs from our training project (with any optional filters) and use them as candidate models for the evaluation flow."
    ]
   },
   {
@@ -545,9 +540,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    " #🪄🐝\n",
     "api = wandb.Api()\n",
-    "#Grab all run trials from a specific date range?\n",
-    "#TODO: figure out best criteria to get runs\n",
+    "\n",
+    "#Example: Grab all run trials from a specific date range?\n",
     "model_runs = api.runs(f'{wandb_entity}/{project_name}-trials', {\n",
     "    # \"$and\": [{\n",
     "    # 'created_at': {\n",
@@ -583,6 +579,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e666c25-ace1-4819-8a67-a8ebf8c1ce9c",
+   "metadata": {},
+   "source": [
+    "Note: during our evaluation flow we are not creating a new run per each evaluation. Instead, to be able to keep the context of the training of the model with the evaluation, we simply update the summary metadata of the candidate model runs with the additional evaluation metrics, keeping things unified and streamlined"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dfd1e854-f401-4061-97a1-faabda5f72be",
@@ -598,6 +602,7 @@
     "    model_art = run_details[\"art\"]\n",
     "    #Hack to link evaluated model trials with eval data\n",
     "    #This run refers to the run keeping track of this evaluation action\n",
+    "     #🪄🐝\n",
     "    run.use_artifact(model_art)\n",
     "    run_model_path = Path(run_directory, \"model\")\n",
     "    model_dir = model_art.download(run_model_path)\n",
@@ -626,6 +631,9 @@
     "    dir_to_save = Path(save_directory, run_name, \"satellite\")\n",
     "    dir_to_save.mkdir(parents=True, exist_ok=True)\n",
     "    rasterizer = build_rasterizer(cfg, dm)\n",
+    "    eval_dataset = AgentDataset(cfg, eval_zarr, rasterizer, agents_mask=eval_mask)\n",
+    "    eval_dataloader = DataLoader(eval_dataset, shuffle=eval_cfg[\"shuffle\"], batch_size=eval_cfg[\"batch_size\"], \n",
+    "                                 num_workers=eval_cfg[\"num_workers\"])\n",
     "    satellite_eval_metrics, satellite_eval_frame_prediction_details, satellite_gif, satellite_pred_df = evaluate_model(model, criterion, \n",
     "                                                             eval_dataloader, \n",
     "                                                             eval_gt_path, \n",
@@ -638,25 +646,11 @@
     "    print(satellite_gif)\n",
     "    semantic_predictions = []\n",
     "    for val in semantic_eval_frame_prediction_details.values():\n",
-    "        semantic_predictions.append(wandb.Image(str(val[\"image_path\"])))\n",
+    "        semantic_predictions.append(wandb.Image(str(val[\"image_path\"])))  #🪄🐝\n",
     "        \n",
     "    satellite_predictions = []\n",
     "    for val in satellite_eval_frame_prediction_details.values():\n",
-    "        satellite_predictions.append(wandb.Image(str(val[\"image_path\"])))\n",
-    "        \n",
-    "    run_data.update(run_details)\n",
-    "    run_data.update({f\"semantic_{key}\": val for key, val in semantic_eval_metrics.items()})\n",
-    "    run_data.update({f\"satellite_{key}\": val for key, val in satellite_eval_metrics.items()})\n",
-    "    run_data.update({f\"{run_name}_semantic_predictions\" : semantic_predictions, f\"{run_name}_satellite_predictions\" : satellite_predictions})\n",
-    "                    \n",
-    "    eval_run_table_data=[]\n",
-    "    semantic_predictions = []\n",
-    "    for val in semantic_eval_frame_prediction_details.values():\n",
-    "        semantic_predictions.append(wandb.Image(str(val[\"image_path\"])))\n",
-    "\n",
-    "    satellite_predictions = []\n",
-    "    for val in satellite_eval_frame_prediction_details.values():\n",
-    "        satellite_predictions.append(wandb.Image(str(val[\"image_path\"])))\n",
+    "        satellite_predictions.append(wandb.Image(str(val[\"image_path\"])))  #🪄🐝\n",
     "\n",
     "    run_data.update(run_details)\n",
     "    \n",
@@ -666,19 +660,24 @@
     "    run_data.update(all_eval_metrics)\n",
     "    \n",
     "    run_data.update({f\"semantic_predictions\" : semantic_predictions, f\"satellite_predictions\" : satellite_predictions})\n",
-    "    run_data.update({f\"semantic_animation\" : wandb.Video(str(semantic_gif)), f\"satellite_animation\" : wandb.Video(str(satellite_gif))})\n",
+    "    run_data.update({f\"semantic_animation\" : wandb.Video(str(semantic_gif)), f\"satellite_animation\" : wandb.Video(str(satellite_gif))})  #🪄🐝\n",
     "    del run_data['art']\n",
     "    del run_data[\"run_summary\"]\n",
     "    \n",
-    "    #BUG: Report to wandb\n",
-    "    # model_art.metadata.update(all_eval_metrics)\n",
-    "    # model_art.save()\n",
     "    run_details[\"run_summary\"].update(all_eval_metrics)\n",
     "    eval_run_table_data.append(run_data)\n",
     "    \n",
-    "    run.log({f\"{run_name}_predicted_semantic_coords\": wandb.Table(dataframe=semantic_pred_df),\n",
-    "            f\"{run_name}_predicted_satellite_coords\": wandb.Table(dataframe=satellite_pred_df)})\n",
+    "    run.log({f\"{run_name}_predicted_semantic_coords\": wandb.Table(dataframe=semantic_pred_df),  #🪄🐝\n",
+    "            f\"{run_name}_predicted_satellite_coords\": wandb.Table(dataframe=satellite_pred_df)})  #🪄🐝\n",
     "    print(\"Done!\\n~~~~~~~~~~~~~~~~\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e18802d0-762e-47c7-8317-36b9c6b780ef",
+   "metadata": {},
+   "source": [
+    "### Log Table containing all details of Eval run"
    ]
   },
   {
@@ -688,7 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fix this hack for columns\n",
+    " #🪄🐝\n",
     "eval_table = wandb.Table(columns = list(eval_run_table_data[0].keys()))"
    ]
   },
@@ -701,6 +700,16 @@
    "source": [
     "for table_data in eval_run_table_data:\n",
     "    eval_table.add_data(*list(table_data.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bacb17e-c249-4cac-b424-1e1f13424310",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(eval_table.data)"
    ]
   },
   {
@@ -721,24 +730,6 @@
    "outputs": [],
    "source": [
     "run.finish()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94e96ad7-c6b6-4191-9230-597a4c091680",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #NOTE: this assumes minimizing the value\n",
-    "# metric_of_interest = \"avg_loss\"\n",
-    "# best_metric_value = float(\"inf\")\n",
-    "# best_art = None\n",
-    "# for run_name, art_details in run_model_map.items():\n",
-    "#     current_metric_value = art_details[metric_of_interest]\n",
-    "#     if current_metric_value < best_metric_value:\n",
-    "#         best_metric_value = current_metric_value\n",
-    "#         best_art = art_details[\"art\"]"
    ]
   }
  ],
