--- a/Notebooks/In Progress/Actively Worked On/Level-5-agent_motion_prediction_train.ipynb
+++ b/Notebooks/In Progress/Actively Worked On/Level-5-agent_motion_prediction_train.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "#NOTE: DONT USE RELATIVE PATHS FOR THE MODELS PROVIDED BY L5\n",
-    "experiments_directory = Path(Path(os.path.abspath('')).parent.parent, \"Experiments\")\n",
+    "experiments_directory = Path(Path(os.path.abspath('')).parent.parent.parent, \"Experiments\")\n",
     "experiments_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "data_directory = Path(experiments_directory, \"data\")\n",
@@ -492,16 +492,16 @@
     "            session.report(\n",
     "                metrics=metrics,\n",
     "                checkpoint=Checkpoint.from_dict(dict(step=step, model=model)))\n",
+    "            #Bug: Need to call init to be able to alert\n",
+    "            # wandb.alert(\n",
+    "            #     title=f'{trial_readable_name}_checkpoint_{checkpoint_counter}_complete',\n",
+    "            #     text=f'Final loss was {loss} and final avg_loss was {avg_loss}'\n",
+    "            # )\n",
     "            checkpoint_counter += 1\n",
     "        else:\n",
     "            session.report(\n",
     "                metrics=metrics\n",
     "            )\n",
-    "        \n",
-    "    wandb.alert(\n",
-    "        title=f'{trial_readable_name}_complete',\n",
-    "        text=f'Final loss was {loss} and final avg_loss was {avg_loss}'\n",
-    "    )\n",
     "\n",
     "    \n",
     "    # run.finish()"
